--- a/7.1-alpine/Dockerfile
+++ b/7.1-alpine/Dockerfile
@@ -27,10 +27,12 @@ RUN apk --no-cache add \
     php7-mbstring \
     php7-mcrypt \
     php7-opcache \
+    php7-openssl \
     php7-pcntl \
     php7-pdo_pgsql \
     php7-phar \
     php7-session \
+    php7-simplexml \
     php7-tokenizer \
     php7-zip \
     php7-xml \
