Nuevas extensiones PHP: php7-ctype php7-iconv php7-xml php7-fileinfo

--- a/7.1-alpine/Dockerfile
+++ b/7.1-alpine/Dockerfile
@@ -18,11 +18,14 @@ RUN apk --no-cache add \
     bash \
     tzdata \
     php7 \
+    php7-ctype \
     php7-curl \
     php7-dom \
     php7-exif \
+    php7-fileinfo \
     php7-gd \
     php7-gmp \
+    php7-iconv \
     php7-json \
     php7-mbstring \
     php7-mcrypt \
