Agrega extensiones PHP mas usadas

--- a/7.1-alpine/Dockerfile
+++ b/7.1-alpine/Dockerfile
@@ -29,6 +29,7 @@ RUN apk --no-cache add \
     php7-json \
     php7-mbstring \
     php7-mcrypt \
+    php7-memcached \
     php7-opcache \
     php7-openssl \
     php7-pcntl \
@@ -39,6 +40,8 @@ RUN apk --no-cache add \
     php7-tokenizer \
     php7-zip \
     php7-xml \
+    php7-xmlwriter \
+    php7-xsl \
     libsodium \
     apache2 \
     php7-apache2 \
