--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -73,6 +73,30 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_REPOSITORY }}:7.4-web-rootless-${{ steps.vars.outputs.tag }} 
           target: rootless
       -
+        name: Push 8.8 cli to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: ./8.0-alpine/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_REPOSITORY }}:8.0-cli-${{ steps.vars.outputs.tag }}
+          target: cli
+      -
+        name: Push 8.0 web to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: ./8.0-alpine/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_REPOSITORY }}:8.0-web-${{ steps.vars.outputs.tag }} 
+          target: web
+      -
+        name: Push 8.0 rootless to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          file: ./8.0-alpine/Dockerfile
+          tags: ${{ secrets.DOCKERHUB_REPOSITORY }}:8.0-web-rootless-${{ steps.vars.outputs.tag }} 
+          target: rootless
+      -
         name: Update repo description
         uses: peter-evans/dockerhub-description@v2
         with:
