--- a/8.0-alpine/Dockerfile
+++ b/8.0-alpine/Dockerfile
@@ -33,6 +33,7 @@ RUN apk --no-cache add \
     php8-pecl-memcached \    
     libsodium \
     curl \
+    && echo "date.timezone  = $TZ" > /etc/php8/conf.d/80-siu-timezone.ini \
     && rm -rf /var/cache/apk/*
 
 FROM cli as web
