--- a/8.0-alpine/Dockerfile
+++ b/8.0-alpine/Dockerfile
@@ -7,7 +7,6 @@ RUN apk --no-cache add \
     bash \
     tzdata \
     php8 \
-    php8-cli \
     php8-ctype \
     php8-curl \
     php8-dom \
@@ -38,8 +37,7 @@ RUN apk --no-cache add \
     && rm -rf /var/cache/apk/*
 
 # https://gitlab.alpinelinux.org/alpine/aports/-/issues/12308
-RUN ln -s php8 /usr/bin/php
-
+RUN ln -s /usr/bin/php8 /usr/bin/php
 
 FROM cli as web
 
