--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -17,7 +17,7 @@ jobs:
       -
         name: Set tag version
         id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+        run: echo "{name}={tag::${GITHUB_REF#refs/*/}}" >> $GITHUB_OUTPUT
       -
         name: Login to DockerHub
         uses: docker/login-action@v2
