Permite ejecutar en puerto 80 con usuario non-root
En Docker versión 19.x se produce un error al lanzar el contenedor:

  (13)Permission denied: AH00072: make_sock: could not bind to address 0.0.0.0:80

Se da debido a que el contenedor se ejecuta como usuario non-root y este no tiene
permitido abrir sockets sobre puertos no privilegiados (0-1024).

--- a/8.1-alpine/Dockerfile
+++ b/8.1-alpine/Dockerfile
@@ -63,6 +63,11 @@ EXPOSE 80
 
 FROM web as rootless
 
+# https://github.com/docker-library/httpd/issues/118
+# para soportar Docker <= 19.x
+RUN apk add libcap
+RUN setcap "cap_net_bind_service=+ep" /usr/sbin/httpd
+
 ARG USER=siu
 ENV USER=$USER
 ARG UID=222
