--- a/8.1-alpine/Dockerfile
+++ b/8.1-alpine/Dockerfile
@@ -63,6 +63,11 @@ EXPOSE 80
 
 FROM web as rootless
 
+# https://github.com/docker-library/httpd/issues/118
+# para soportar Docker <= 19.x
+RUN apk --no-cache add libcap
+RUN setcap "cap_net_bind_service=+ep" /usr/sbin/httpd
+
 ARG USER=siu
 ENV USER=$USER
 ARG UID=222
