Actualiza img base Alpinev3.18 y comenta creacio de symlink

--- a/8.1-alpine/Dockerfile
+++ b/8.1-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.16 as cli
+FROM alpine:3.18 as cli
 
 # Por defecto se utiliza la timezone de Buenos Aires
 ENV TZ=America/Argentina/Buenos_Aires
@@ -37,7 +37,7 @@ RUN apk --no-cache add \
     && rm -rf /var/cache/apk/*
 
 # https://gitlab.alpinelinux.org/alpine/aports/-/issues/12308
-RUN ln -s /usr/bin/php81 /usr/bin/php
+# RUN ln -s /usr/bin/php81 /usr/bin/php
 
 FROM cli as web
 
