Actualiza base a alpine:3.19  (#27)
* Actualiza Alpine@3.19 y comenta generacion de link simbolico

* Actualiza buildeo php8.1 y agrega imagen para php8.3

* Ajusta readme y workflow de generacion

--- a/8.1-alpine/Dockerfile
+++ b/8.1-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.18 as cli
+FROM alpine:3.19 as cli
 
 # Por defecto se utiliza la timezone de Buenos Aires
 ENV TZ=America/Argentina/Buenos_Aires
@@ -36,7 +36,9 @@ RUN apk --no-cache add \
     && echo "date.timezone  = $TZ" > /etc/php81/conf.d/80-siu-timezone.ini \
     && rm -rf /var/cache/apk/*
 
-
+# https://gitlab.alpinelinux.org/alpine/aports/-/issues/12308
+RUN ln -s /usr/bin/php81 /usr/bin/php
+    
 FROM cli as web
 
 RUN apk --no-cache add \
