--- a/8.3-alpine/Dockerfile
+++ b/8.3-alpine/Dockerfile
@@ -6,44 +6,44 @@ ENV TZ=America/Argentina/Buenos_Aires
 RUN apk --no-cache add \
     bash \
     tzdata \
-    php82 \
-    php82-ctype \
-    php82-curl \
-    php82-dom \
-    php82-exif \
-    php82-fileinfo \
-    php82-gd \
-    php82-gmp \
-    php82-iconv \
-    php82-json \
-    php82-mbstring \
-    php82-opcache \
-    php82-openssl \
-    php82-pcntl \
-    php82-pdo_pgsql \
-    php82-phar \
-    php82-session \
-    php82-simplexml \
-    php82-sodium \
-    php82-tokenizer \
-    php82-zip \
-    php82-xml \
-    php82-xmlwriter \
-    php82-xsl \
-    php82-pecl-memcached \
+    php83 \
+    php83-ctype \
+    php83-curl \
+    php83-dom \
+    php83-exif \
+    php83-fileinfo \
+    php83-gd \
+    php83-gmp \
+    php83-iconv \
+    php83-json \
+    php83-mbstring \
+    php83-opcache \
+    php83-openssl \
+    php83-pcntl \
+    php83-pdo_pgsql \
+    php83-phar \
+    php83-session \
+    php83-simplexml \
+    php83-sodium \
+    php83-tokenizer \
+    php83-zip \
+    php83-xml \
+    php83-xmlwriter \
+    php83-xsl \
+    php83-pecl-memcached \
     libsodium \
     curl \
-    && echo "date.timezone  = $TZ" > /etc/php82/conf.d/80-siu-timezone.ini \
+    && echo "date.timezone  = $TZ" > /etc/php83/conf.d/80-siu-timezone.ini \
     && rm -rf /var/cache/apk/*
 
 # https://gitlab.alpinelinux.org/alpine/aports/-/issues/12308
-# RUN ln -s /usr/bin/php82 /usr/bin/php
+RUN ln -s /usr/bin/php83 /usr/bin/php
 
 FROM cli as web
 
 RUN apk --no-cache add \
     apache2 \
-    php82-apache2 \
+    php83-apache2 \
     && rm -rf /var/cache/apk/* \
     && mkdir -p /var/log/apache2 \
     && ln -s /dev/stderr /var/log/apache2/error.log \
@@ -51,7 +51,7 @@ RUN apk --no-cache add \
     #fix warning https://stackoverflow.com/a/56645177"
     && sed -i 's/^Listen 80$/Listen 0.0.0.0:8080/' /etc/apache2/httpd.conf
 COPY common/apache/* /etc/apache2/conf.d/
-COPY common/php/* /etc/php82/conf.d/
+COPY common/php/* /etc/php83/conf.d/
 COPY common/siu-entrypoint.d/* /siu-entrypoint.d/
 COPY common/entrypoint.sh /usr/local/bin/entrypoint.sh
 
@@ -71,7 +71,7 @@ RUN adduser -h /usr/local/app -u $UID -G www-data -S $USER \
     && chown -R $USER.0 \
         /var/run/apache2 \
         /var/log/apache2 \
-        /etc/php82/conf.d \
+        /etc/php83/conf.d \
         /etc/apache2/conf.d \
         /var/www/localhost/htdocs \
         /siu-entrypoint.d \
@@ -79,7 +79,7 @@ RUN adduser -h /usr/local/app -u $UID -G www-data -S $USER \
         /etc/passwd \
         /var/run/apache2 \
         /var/log/apache2 \
-        /etc/php82/conf.d \
+        /etc/php83/conf.d \
         /etc/apache2/conf.d \
         /var/www/localhost/htdocs \
         /siu-entrypoint.d
