--- a/8.4-alpine/Dockerfile
+++ b/8.4-alpine/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.21 as cli
+FROM alpine:3.21 AS cli
 
 # Por defecto se utiliza la timezone de Buenos Aires
 ENV TZ=America/Argentina/Buenos_Aires
@@ -39,7 +39,12 @@ RUN apk --no-cache add \
 # https://gitlab.alpinelinux.org/alpine/aports/-/issues/12308
 RUN ln -s /usr/bin/php84 /usr/bin/php
 
-FROM cli as web
+COPY common/siu-entrypoint.d/* /siu-entrypoint.d/
+COPY common/entrypoint.sh /usr/local/bin/entrypoint.sh
+
+ENTRYPOINT ["entrypoint.sh"]
+
+FROM cli AS web
 
 RUN apk --no-cache add \
     apache2 \
@@ -52,16 +57,16 @@ RUN apk --no-cache add \
     && sed -i 's/^Listen 80$/Listen 0.0.0.0:8080/' /etc/apache2/httpd.conf
 COPY common/apache/* /etc/apache2/conf.d/
 COPY common/php/* /etc/php84/conf.d/
-COPY common/siu-entrypoint.d/* /siu-entrypoint.d/
-COPY common/entrypoint.sh /usr/local/bin/entrypoint.sh
-
-ENTRYPOINT ["entrypoint.sh"]
+## COPY common/siu-entrypoint.d/* /siu-entrypoint.d/
+## COPY common/entrypoint.sh /usr/local/bin/entrypoint.sh
+ 
+## ENTRYPOINT ["entrypoint.sh"] 
 
 CMD ["httpd", "-D", "FOREGROUND"]
 
 EXPOSE 8080
 
-FROM web as rootless
+FROM web AS rootless
 
 ARG USER=siu
 ENV USER=$USER
